# crTool

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  GUI_QUICK_START.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP.md  TEST-FILE-CREATION-README.md  TESTING.md  build.sh  rustfmt.toml  verify-gui-setup.sh  verify_setup.sh
.cursor/rules/: json-schema-data-structures.mdc
.git-hooks/: pre-commit
.github/workflows/: ci.yml  format-check.yml
Cursor-Docs/: GUI_IMPLEMENTATION.md  GUI_SETUP_COMPLETE.md  INGREDIENT_IMPLEMENTATION.md  INGREDIENT_LABEL_SUPPORT.md  INGREDIENT_METADATA_IMPLEMENTATION.md  INGREDIENT_METADATA_ISSUE.md  JPT_FEATURE_SUMMARY.md  README.md  VALIDATION_FEATURE.md
INTERNAL/: sample-batch.json
INTERNAL/schemas/: batch.schema.json  crJSON-schema.json  indicators-schema.json  test-case-description.md  test-case.schema.json
crtool-cli/: Cargo.toml  README.md
crtool-cli/src/: batch.rs  extraction.rs  main.rs  processing.rs  profile.rs  test_case.rs
crtool-gui/: Cargo.toml  README.md  build.rs
crtool-gui/macos/: Info.plist  open_document_handler.m
crtool-gui/src/: app.rs  document.rs  macos_open_document.rs  main.rs  manifest_ui.rs  security_scoped.rs  tab_viewer.rs  util.rs
examples/: README.md  actions_v2_cropped_manifest.json  actions_v2_edited_manifest.json  actions_v2_filtered_manifest.json  actions_v2_redacted_manifest.json  actions_v2_translated_manifest.json  asset_ref_manifest.json  asset_type_manifest.json  cloud_data_manifest.json  depthmap_gdepth_manifest.json  external_reference_manifest.json  full_manifest.json  simple_manifest.json  simple_with_ingredient.json  specVersion_manifest.json  with_ingredients.json  with_ingredients_from_files.json
profiles/: fully-generative-ai_profile.yml  human-illustration_profile.yml  real-life-capture_profile.yml  real-media_profile.yml
scripts/: format.sh  install-hooks.sh
src/: lib.rs  main.rs
test-cases/negative/: tc-n-created-nodst.json  tc-n-inception.json  tc-n-placed-empty-params.json  tc-n-redacted-bad-reason.json  tc-n-removed.json
test-cases/positive/: tc-changes-spatial.json  tc-created.json  tc-opened-with-ingredient.json  tc-placed-with-ingredient.json
tests/: README.md  integration_tests.rs  test_create_test_cli.rs  test_crjson_extraction.rs  test_jpt_extraction.rs  test_profile_evaluation.rs  test_validation.rs
tests/common/: mod.rs
tests/fixtures/: generative_ai_indicators.json  human_illustration_indicators.json  minimal_valid_crjson.json  minimal_valid_indicators.json  non_compliant_indicators.json  real_life_capture_indicators.json  valid_indicators.json
tests/fixtures/jsons/: generative_ai_indicators.json  human_illustration_indicators.json  invalid_indicators.json  minimal_valid_crjson.json  non_compliant_indicators.json  real_life_capture_indicators.json
tests/src/: test_create_test_cli.rs  test_crjson_extraction.rs  test_profile_evaluation.rs  test_validation.rs
tests/src/common/: mod.rs
testset/: C2PA-JPT Testfiles.xlsx  n-actions-created-gathered.json  n-actions-created-nodst.json  n-actions-inception-multiple.json  n-actions-inception.json  n-actions-opened.json  n-actions-placed-parent.json  n-actions-placed.json  n-actions-redacted-bad-reason.json  n-actions-redacted-bad-uri.json  n-actions-redacted-no-reason.json  n-actions-redacted.json  n-actions-removed-same-manifest.json  n-actions-removed.json  n-actions-softwareAgent-and-index.json  n-actions-softwareAgent-missing.json  n-actions-translated.json  n-actions-watermarked-bound.json  n-asset-ref-empty-references.json  n-asset-ref-missing-uri.json  p-actions-changes-spatial.json  p-actions-created-filtered.json  p-actions-created-with-custom.json  p-actions-created-with-icon.json  p-actions-created.json  p-actions-opened-manifest-invalid.json  p-actions-opened-manifest.json  p-actions-opened-no-manifest-metadata.json  p-actions-opened-no-manifest.json  p-actions-placed-manifest-metadata.json  p-actions-placed-manifest.json  p-actions-placed.json  p-actions-redacted.json  p-actions-related.json  p-actions-softwareAgents.json  p-actions-template-all.json  p-actions-template-icon.json  p-actions-template.json  p-actions-translated.json  p-actions-watermarked-bound.json  (+5 more)
