[workspace]
members = [".", "crtool-gui", "crtool-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Leonard Rosenthol"]
license = "MIT"
repository = "https://github.com/lrosenthol/crTool"

[package]
name = "crtool"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Content Credential Tool - A library to work with Content Credentials (C2PA Manifests)"
license.workspace = true
repository.workspace = true
keywords = ["c2pa", "content-authenticity", "provenance", "media"]
categories = ["multimedia"]

[lib]
name = "crtool"
path = "src/lib.rs"

[features]
# Enable when c2pa-rs exposes JpegTrustReader again. Do not use --all-features in CI/hooks
# or this will try to compile the (currently missing) JpegTrustReader.
jpeg_trust = []

[dependencies]
c2pa = { path = "../c2pa-rs/sdk", features = ["file_io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
jsonschema = "0.23"

[dev-dependencies]
ed25519-dalek = "2.2"
pem = "3.0"
image = { version = "0.25", default-features = false, features = [
	"jpeg",
	"png",
	"gif",
	"bmp",
	"tiff",
	"webp",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
