[workspace]
members = [".", "crtool-gui", "crtool-cli"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Leonard Rosenthol"]
license = "Apache-2.0"
repository = "https://github.com/lrosenthol/crTool"

[package]
name = "crtool"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Content Credential Tool - A library to work with Content Credentials (C2PA Manifests)"
license.workspace = true
repository.workspace = true
keywords = ["c2pa", "content-authenticity", "provenance", "media"]
categories = ["multimedia"]

[lib]
name = "crtool"
path = "src/lib.rs"

[features]

[dependencies]
c2pa = { path = "../c2pa-rs/sdk", features = ["file_io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
jsonschema = "0.23"

[dev-dependencies]
ed25519-dalek = "2.2"
pem = "3.0"
profile_evaluator_rs = { path = "../profile-evaluator-rs" }
serde_yaml = "0.9"
image = { version = "0.25", default-features = false, features = [
	"jpeg",
	"png",
	"gif",
	"bmp",
	"tiff",
	"webp",
] }

[[test]]
name = "integration_tests"
path = "tests/src/integration_tests.rs"

[[test]]
name = "test_create_test_cli"
path = "tests/src/test_create_test_cli.rs"

[[test]]
name = "test_crjson_extraction"
path = "tests/src/test_crjson_extraction.rs"

[[test]]
name = "test_profile_evaluation"
path = "tests/src/test_profile_evaluation.rs"

[[test]]
name = "test_validation"
path = "tests/src/test_validation.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
