[package]
name = "crTool"
version = "0.2.0"
edition = "2021"
authors = ["Leonard Rosenthol"]
description = "CLI for Content Credential Tool - Create, embed, extract, and validate C2PA manifests"
license = "MIT"
repository = "https://github.com/lrosenthol/crTool"
keywords = ["c2pa", "content-authenticity", "provenance", "media", "cli"]
categories = ["command-line-utilities", "multimedia"]

[[bin]]
name = "crTool"
path = "src/main.rs"

[dependencies]
crtool = { path = ".." }
c2pa = { path = "../../c2pa-rs/sdk", features = ["file_io"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
glob = "0.3"
image = { version = "0.25", default-features = false, features = [
	"jpeg",
	"png",
	"gif",
	"bmp",
	"tiff",
	"webp",
] }
pem = "3.0"
x509-parser = "0.16"
der-parser = "9.0"
ed25519-dalek = "2.2"
p256 = { version = "0.13", features = ["ecdsa"] }
rsa = { version = "0.9", features = ["sha2"] }
jsonschema = "0.23"

[dev-dependencies]
ed25519-dalek = "2.2"
pem = "3.0"
