[package]
name = "crTool-gui"
version = "0.1.0"
edition = "2021"
authors = ["Leonard Rosenthol"]
description = "GUI for Content Credential Tool - Extract and validate C2PA manifests"
license = "MIT"

[dependencies]
crtool = { path = ".." }
eframe = "0.33"
egui = "0.33"
egui_extras = { version = "0.33", features = ["svg"] }
egui-twemoji = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rfd = "0.15"                                           # Native file dialogs
urlencoding = "2.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[build-dependencies]
cc = "1.0"

